--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,3 +14,12 @@
 .contact-form{
     margin-top: 10px;
 }
+
+.navbar-default{
+    background-color: #fff;
+    border-color: #F3A00A;
+}
+
+.main-text{
+    margin-top: 10px;
+}
